syntax = "proto3";
package com.alibaba.tsdb.service.api;

service MultiFieldsPutService {
    rpc mput (MputRequest) returns (MputResponse) {
    }
}

// for data generation
message MultifieldPoint {
    int64               timestamp = 1;
    // sorted by tagK
    string              serieskey = 2;
    map<string, double> fields = 3;
}

// for mput request
message MputPoint {
    int64               timestamp = 1;
    string              serieskey = 2;
    repeated double     fvalues = 3;
}

message MputRequest {
    repeated string    fnames = 1;
    repeated MputPoint points = 2;
}

message MputResponse {
    bool ret = 1;
}

// protoc --gofast_out=plugins=grpc:alitsdb_serializaition alitsdb.proto
//
// plugin installation:
// - protoc-gen-gofast: go get github.com/gogo/protobuf/protoc-gen-gofast
// - grpc:              go get google.golang.org/grpc
//                      or, execute `git clone https://github.com/grpc/grpc-go.git $GOPATH/src/google.golang.org/grpc` and install it manually